023 ==> 372584 - It is not possible to give a similarity range for duplicates search in maintenance dialog [patch].
024 ==> 372683 - Attempt to set a screen on a child window and DBusMenuExporterPrivate::fillLayoutItem No id for action.
025 ==> 372640 - Can't drag any image file from digikam to GIMP.
026 ==> 370150 - digiKam geolocation editor drag and drop works only at the first edit.
027 ==> 372672 - File Renaming Options sidebar is missing.
028 ==> 372722 - Missing items in albums.
029 ==> 204006 - Automatic renaming of duplicate filenames while importing.
030 ==> 372312 - Database upgrade v7 to v8 failed.
031 ==> 366162 - After exporting the images in picasa or yandex photo they are not visible in digiKam.
032 ==> 261417 - Duplicate image counter is not adjusted when removing a duplicate [patch].
033 ==> 354232 - Lens information is always "unavailable" for Pentax K-S1 images.
034 ==> 372684 - No thumbnail shows for some files.
035 ==> 372781 - The recent similarity range is not saved which may lead to odd results [patch].
036 ==> 372831 - Digikam crashes when trying to fix red eyes.
037 ==> 372872 - Possible Null-Pointer dereference in AlbumManager [patch].
038 ==> 372859 - iphone not usable anymore in digiKam.
039 ==> 367611 - Time gap on renaming at download...
040 ==> 371899 - Crash on tagging images.
041 ==> 363998 - digiKam sees Nikon D700 but cannot import files.
042 ==> 361848 - When writing metadata to files is disabled, digikam still displays "Writing metadata to files".
043 ==> 330062 - Import from MTP or PTP based cameras is very slow.
044 ==> 372900 - When starting Digikam5, it crashes before opening the program, but after the splash screen.
045 ==> 372427 - Some pictures do not display.
046 ==> 102500 - ICONVIEW : more space conservative in thumbs view.
047 ==> 330064 - Copy file from computer to camera doesn't work.
048 ==> 372628 - Crash at startup connecting to MySQL 5.7 database.
049 ==> 